<resources>
    <string name="app_name">AppMod</string>
    <string name="phone">Please enter the 3 digits we send you via email:</string>
    <string name="termsConditions">Terms and Conditions</string>
    <string name="agreeContinue">I Agree and Continue</string>
    <string name="tapAgree">By clicking \"I Agree and Continue\", I acknowledge that I have read and accept the </string>
    <string name="role">Role</string>
    <string name="token_error_message">Please check internet connectivity and then click refresh button below.</string>
    <string name="kill">Kill the application</string>
    <string name="uninstall">Uninstall the application</string>
    <string name="follow">Follow the advice</string>
    <string name="dontfollow">I will take my own action</string>
    <string name="dependant">Advisee (above 50 years old)</string>
    <string name="accepted_req">has accepted your request.</string>
    <string name="not_accepted_req">has not accepted your request</string>
    <string name="paired">This advisee has been paired up with you.</string>
    <string name="not_accepted">This advisee has not accepted your request. Please send the approval request again.</string>
    <string name="notif_not_accepted">Please send the approval request again.</string>
    <string name="adviser">Advisor (18 to 39 years old)</string>
    <string name="register_text_adviser">Thanks. You have successfully registered with the application. Please click on \"Advisees\" button to add your advisees and give them advices later.</string>
    <string name="register_text_dependant">Thanks. You have successfully registered with the application. Please wait till your advisor sends you an approval request for getting paired up.</string>
    <string name="addDependants">Add Advisees</string>
    <string name="noDependants">No advisees found. Please click on the button below to add an advisee. You can add up to 3 advisees.</string>
    <string name="noDepenAndAdvice">No advisees found. You can add up to 3 advisees to whom you can give advices.</string>
    <string name="sent_request">This advisee has been sent the approval request. Waiting for response.</string>
    <string name="not_registered">This advisee has not yet registered with this app. We will notify you when advisee completes the registration.</string>
    <string name="advisee_registered">This advisee has registered with the application. Please send approval request to get paired up.</string>
    <string name="network_problem">This advisee could not receive approval request due to some network problem. Please send the approval request again.</string>
    <string name="back">Back</string>
    <string name="add">Add</string>
    <string name="search">Search...</string>
    <string name="dependants">Advisees</string>
    <string name="advices">Advices</string>
    <string name="participate">Participate in user study conducted by</string>
    <string name="notif_sent_request">This advisee has been sent the approval request.</string>
    <string name="notif_not_registered">This advisee has not yet registered with this app</string>
    <string name="notif_network_problem">This advisee could not receive approval request due to some network problem</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="deleted">has been deleted as your advisee.</string>
    <string name="clickOne">Please click on the name below to see the logs.</string>
    <string name="donothing">Do nothing with the application</string>
    <string name="noAdvice">No anomalies and advices found for</string>
    <string name="pending">Pending</string>
    <string name="OK">OK</string>
    <string name="advicegiven">You have already given advice for this anomaly.  Click on \'Advices\' button to see the history of advices.</string>
    <string name="getadvice">Get advice</string>
    <string name="logs">Logs</string>
    <string name="addadvisees">Add advisees</string>
    <string name="nopending">No pending tasks found.</string>
    <string name="goback">Go back to previous screen</string>
    <string name="os_desc">of advisors recommended this)</string>
    <string-array name="outsourcing">
        <item>Candy Crush is reading your contacts and sending it to www.hackme.com.,89%,11%,0%</item>
        <item>Clock is accessing your geolocation and sending it out.,40%,50%,10%</item>
        <item>Facebook is accessing the location of your device.,36%,24%,40%</item>
        <item>Gmail is modifying the calendar events of your device.,58%,17%,25%</item>
        <item>Gmail is sending emails to everyone in your address book.,46%,51%,3%</item>
        <item>Instagram is accessing the camera of your device.,22%,0%,78%</item>
        <item>Sudoku is reading your sim card info and sending it to www.abnormal.com.,73%,27%,0%</item>
        <item>Whatsapp is accessing the contacts of your device.,39%,6%,56%</item>
        <item>Whatsapp is making phone calls to 61234567 (unknown).,50%,50%,0%</item>
        <item>YouTube is accessing the microphone of your device.,10%,40%,50%</item>
    </string-array>
    <string-array name="ownaction">
        <item>Messenger is adding a calendar event to your device.</item>
        <item>Happy Color is reading your sim card info and sending it to www.hackme.com.</item>
        <item>Google Play Movies and TV is accessing the microphone of your device.</item>
    </string-array>
    <string-array name="detail">
        <item>Candy Crush is reading your contacts and sending it to www.hackme.com.,candycrush.html,candycrush_contact.html</item>
        <item>Clock is accessing your geolocation and sending it out.,clock.html,clock_location.html</item>
        <item>Facebook is accessing the location of your device.,facebook.html,facebook_location.html</item>
        <item>Gmail is modifying the calendar events of your device.,gmail.html,gmail_calendar.html</item>
        <item>Gmail is sending emails to everyone in your address book.,gmail.html,gmail_email.html</item>
        <item>Instagram is accessing the camera of your device.,instagram.html,instagram_camera.html</item>
        <item>Sudoku is reading your sim card info and sending it to www.abnormal.com.,sudoku.html,sudoku_sim.html</item>
        <item>Whatsapp is accessing the contacts of your device.,whatsapp.html,whatsapp_contact.html</item>
        <item>Whatsapp is making phone calls to 61234567 (unknown).,whatsapp.html,whatsapp_call.html</item>
        <item>YouTube is accessing the microphone of your device.,youtube.html,youtube_microphone.html</item>
        <item>Bubble Shooter is reading your contacts and sending it to www.hackme.com.,bubbleshooter.html,bubbleshooter_contact.html</item>
        <item>Compass Galaxy is accessing your geolocation and sending it out.,compass.html,compass_location.html</item>
        <item>Linkedin is accessing the location of your device.,linkedin.html,linkedin_location.html</item>
        <item>Microsoft Outlook is modifying the calendar events of your device.,outlook.html,outlook_calendar.html</item>
        <item>Microsoft Outlook is sending emails to everyone in your address book.,outlook.html,outlook_email.html</item>
        <item>Tumblr is accessing the camera of your device.,tumblr.html,tumblr_camera.html</item>
        <item>Mahjong Titans is reading your sim card info and sending it to www.abnormal.com.,mahjong.html,mahjong_sim.html</item>
        <item>Line is accessing the contacts of your device.,line.html,line_contact.html</item>
        <item>Line is making phone calls to 61234567 (unknown).,line.html,line_call.html</item>
        <item>VLC is accessing the microphone of your device.,vlc.html,vlc_microphone.html</item>
        <item>My Talking Tom is accessing the contacts of your device and sending it to www.abnormal.com.,mytalkingtom.html,mytalkingtom_contact.html</item>
        <item>Calculator is accessing the location of your device.,calculator.html,calculator_location.html</item>
        <item>Google+ is accessing your geolocation of your device.,googleplus.html,googleplus_location.html</item>
        <item>Messenger is adding a calendar event to your device.,messenger.html,messenger_calendar.html</item>
        <item>Messenger is sending SMS messages to 97752222 (unknown).,messenger.html,messenger_contact.html</item>
        <item>Google+ is accessing the camera of your device.,googleplus.html,googleplus_camera.html</item>
        <item>Happy Color is reading your sim card info and sending it to www.hackme.com.,happycolor.html,happycolor_sim.html</item>
        <item>Skype is accessing the contacts of your device.,skype.html,skype_contact.html</item>
        <item>Skype is making phone calls to 97752222 (unknown).,skype.html,skype_call.html</item>
        <item>Google Play Movies and TV is accessing the microphone of your device.,googleplay.html,googleplay_microphone.html</item>
    </string-array>
    <string name="view_detail">Details of the anomaly</string>
</resources>