<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">

            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:text="@string/phone"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#CC0000" />

            <EditText
                android:id="@+id/phone_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phone"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip" />

            <TextView
                android:id="@+id/role"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phone_edit"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/role"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#CC0000" />

            <RadioGroup
                android:id="@+id/radiogrp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/role"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dependant" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/adviser" />
            </RadioGroup>

            <TextView
                android:id="@+id/tapAgree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radiogrp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/tapAgree"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/termsConditions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tapAgree"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="60dp"
                android:layout_marginTop="10dp"
                android:text="@string/termsConditions"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#CC0000" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/footerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/mainLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#AEC6CF">

                    <View
                        android:id="@+id/helper"
                        android:layout_width="match_parent"
                        android:layout_height="5dp"
                        android:layout_marginBottom="68dp"
                        android:layout_marginLeft="-10dp"
                        android:layout_marginRight="-10dp"
                        android:background="#CC0000" />

                    <Button
                        android:id="@+id/agree_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:background="#08457E"
                        android:text="@string/agreeContinue"
                        android:textColor="#FFFFFF"/>

                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</ScrollView>