<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swipeContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/participate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/participate"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#CC0000" />

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:layout_below="@+id/participate"
                android:orientation="horizontal"
                android:weightSum="2">

                <ImageView
                    android:id="@+id/logo1"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/smu" />

                <ImageView
                    android:id="@+id/logo2"
                    android:layout_width="0dp"
                    android:layout_height="43dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:src="@drawable/tau" />
            </LinearLayout>

            <Button
                android:id="@+id/empty"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_below="@+id/linear"
                android:layout_marginTop="10dp"
                android:background="#CC0000"
                />

            <TextView
                android:id="@+id/emptytv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/empty"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:textColor="#000"
                android:textSize="16sp" />

            <ListView
                android:id="@+id/notif_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/emptytv"
                android:layout_marginBottom="70dp"
                android:divider="@drawable/list_divider"
                android:dividerHeight="0.5dp"></ListView>

            <View
                android:id="@+id/helper"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="68dp"
                android:background="#CC0000" />

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/buttons"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_toRightOf="@id/helper"
                android:background="#AEC6CF"
                android:gravity="bottom"
                android:orientation="horizontal"
                android:weightSum="3">

                <Button
                    android:id="@+id/manageLogs"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="#08457E"
                    android:gravity="center"
                    android:text="@string/logs"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/manageDependants"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="#08457E"
                    android:gravity="center"
                    android:text="@string/dependants"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/withdraw"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="#CC0000"
                    android:gravity="center"
                    android:text="Withdraw"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />
            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</android.support.v4.widget.SwipeRefreshLayout>